--- a/section-2.3.org
+++ b/section-2.3.org
@@ -57,3 +57,171 @@ To her surprise, the interpreter prints back quote. Explain.
 
 ** Solution
 The first quote mark is equivalent to the function quote. Thus The expression "''abracadabra" is equivalent to "(quote (quote abracadabra))", which can be read as: a list with the symbols quote and abracadabra.
+
+* Exercise 2.56
+Show how to extend the basic differentiator to handle more kinds of expressions. For instance, implement the differentiation rule
+\[\frac{d(u^n)}{dx} = nu^{n−1}\frac{du}{dx}\]
+by adding a new clause to the deriv program and defining appropriate procedures exponentiation?, base, exponent, and make-exponentiation. (You may use the symbol ** to denote exponentiation.) Build in the rules that anything raised to the power 0 is 1 and anything raised to the power 1 is the thing itself.
+
+** Solution
+#+begin_src scheme
+;; Variable
+(define (variable? x) (symbol? x))
+(define (same-variable? v1 v2)
+  (and (variable? v1)
+       (variable? v2)
+       (eq? v1 v2)))
+
+;; Sum
+(define (make-sum a1 a2)
+  (cond ((=number? a1 0) a2)
+        ((=number? a2 0) a1)
+        ((and (number? a1) (number? a2))
+         (+ a1 a2))
+        (else (list '+ a1 a2))))
+
+(define (sum? x)
+  (and (pair? x) (eq? (car x) '+)))
+(define (addend s) (cadr s))
+(define (augend s) (caddr s))
+
+;; Product
+(define (make-product m1 m2)
+  (cond ((or (=number? m1 0)
+             (=number? m2 0))
+         0)
+        ((=number? m1 1) m2)
+        ((=number? m2 1) m1)
+        ((and (number? m1) (number? m2))
+         (* m1 m2))
+        (else (list '* m1 m2))))
+(define (product? x)
+  (and (pair? x) (eq? (car x) '*)))
+(define (multiplier p) (cadr p))
+(define (multiplicand p) (caddr p))
+
+;; Actual Solution ---
+;; Exponentiation
+(define (make-exponentiation base exponent)
+  (cond ((=number? exponent 0) 1)
+        ((=number? exponent 1) base)
+        ((and (number? base) (number? exponent))
+         (expt base exponent))
+        (else (list '** base exponent))))
+
+(define (exponentiation? x)
+  (and (pair? x) (eq? (car x) '**)))
+(define (base e) (cadr e))
+(define (exponent e) (caddr e))
+
+(define (deriv exp var)
+  (cond ((number? exp) 0)
+        ((variable? exp)
+         (if (same-variable? exp var) 1 0))
+        ((sum? exp)
+         (make-sum (deriv (addend exp) var)
+                   (deriv (augend exp) var)))
+        ((product? exp)
+         (make-sum
+          (make-product
+           (multiplier exp)
+           (deriv (multiplicand exp) var))
+          (make-product
+           (deriv (multiplier exp) var)
+           (multiplicand exp))))
+        ((exponentiation? exp)
+         (make-product
+          (exponent exp)
+          (deriv (make-exponentiation
+                  (base exp)
+                  (make-sum (exponent exp) (- 1)))
+                 var)))
+        (else (error "unknown expression
+                      type: DERIV" exp))))
+
+(test-equal 2
+  (deriv '(+ (** x 2) 2) 'x))
+(test-equal 6
+  (deriv '(+ (** x 3) 2) 'x))
+(test-equal '(+ (* a 6) 1)
+  (deriv '(+ (* a (** x 3)) x (* 2 a)) 'x))
+#+end_src
+
+* Exercise 2.57
+Extend the differentiation program to handle sums and products of arbitrary numbers of (two or more) terms. Then the last example above could be expressed as
+#+begin_src scheme :eval never
+(deriv '(* x y (+ x 3)) 'x)
+#+end_src
+Try to do this by changing only the representation for sums and products, without changing the deriv procedure at all. For example, the addend of a sum would be the first term, and the augend would be the sum of the rest of the terms.
+
+#+begin_src scheme
+;; From the Book
+;; Differentiation
+(define (deriv exp var)
+  (cond ((number? exp) 0)
+        ((variable? exp)
+         (if (same-variable? exp var) 1 0))
+        ((sum? exp)
+         (make-sum (deriv (addend exp) var)
+                   (deriv (augend exp) var)))
+        ((product? exp)
+         (make-sum
+          (make-product
+           (multiplier exp)
+           (deriv (multiplicand exp) var))
+          (make-product
+           (deriv (multiplier exp) var)
+           (multiplicand exp))))
+        (else (error "unknown expression
+                      type: DERIV" exp))))
+
+;; Variables
+(define (variable? x) (symbol? x))
+(define (same-variable? v1 v2)
+  (and (variable? v1)
+       (variable? v2)
+       (eq? v1 v2)))
+
+;; Sums
+(define (make-sum a1 a2)
+  (cond ((=number? a1 0) a2)
+        ((=number? a2 0) a1)
+        ((and (number? a1) (number? a2))
+         (+ a1 a2))
+        (else (list '+ a1 a2))))
+
+(define (sum? x)
+  (and (pair? x) (eq? (car x) '+)))
+(define (addend s) (cadr s))
+
+;; Products
+(define (make-product m1 m2)
+  (cond ((or (=number? m1 0)
+             (=number? m2 0))
+         0)
+        ((=number? m1 1) m2)
+        ((=number? m2 1) m1)
+        ((and (number? m1) (number? m2))
+         (* m1 m2))
+        (else (list '* m1 m2))))
+
+(define (product? x)
+  (and (pair? x) (eq? (car x) '*)))
+(define (multiplier p) (cadr p))
+
+;; Actual Solution
+(define (augend s)
+  (let ((agnd (cddr s)))
+    (if (nil? (cdr agnd))
+        (car agnd)
+        (cons '+ agnd))))
+
+(define (multiplicand p)
+  (let ((multcnd (cddr p)))
+    (if (nil? (cdr multcnd))
+        (car multcnd)
+        (cons '* multcnd))))
+
+(test-equal '(+ (* x y) (* y (+ x 3)))
+  (deriv '(* x y (+ x 3)) 'x))
+#+end_src
