--- a/section-2.3.org
+++ b/section-2.3.org
@@ -225,3 +225,159 @@ Try to do this by changing only the representation for sums and products, withou
 (test-equal '(+ (* x y) (* y (+ x 3)))
   (deriv '(* x y (+ x 3)) 'x))
 #+end_src
+
+* Exercise 2.58
+Suppose we want to modify the differentiation program so that it works with ordinary mathematical notation, in which + and * are infix rather than prefix operators. Since the differentiation program is defined in terms of abstract data, we can modify it to work with different representations of expressions solely by changing the predicates, selectors, and constructors that define the representation of the algebraic expressions on which the differentiator is to operate.
+
+1. Show how to do this in order to differentiate algebraic expressions presented in infix form, such as (x + (3 * (x + (y + 2)))). To simplify the task, assume that + and * always take two arguments and that expressions are fully parenthesized.
+
+2. The problem becomes substantially harder if we allow standard algebraic notation, such as (x + 3 * (x + y + 2)), which drops unnecessary parentheses and assumes that multiplication is done before addition. Can you design appropriate predicates, selectors, and constructors for this notation such that our derivative program still works?
+
+** Solution
+*** Fully parethesized
+#+begin_src scheme
+;; From the Book
+;; Differentiation
+(define (deriv exp var)
+  (cond ((number? exp) 0)
+        ((variable? exp)
+         (if (same-variable? exp var) 1 0))
+        ((sum? exp)
+         (make-sum (deriv (addend exp) var)
+                   (deriv (augend exp) var)))
+        ((product? exp)
+         (make-sum
+          (make-product
+           (multiplier exp)
+           (deriv (multiplicand exp) var))
+          (make-product
+           (deriv (multiplier exp) var)
+           (multiplicand exp))))
+        (else (error "unknown expression
+                      type: DERIV" exp))))
+
+;; Variables
+(define (variable? x) (symbol? x))
+(define (same-variable? v1 v2)
+  (and (variable? v1)
+       (variable? v2)
+       (eq? v1 v2)))
+
+;; Solution
+;; Sums
+(define (make-sum a1 a2)
+  (cond ((=number? a1 0) a2)
+        ((=number? a2 0) a1)
+        ((and (number? a1) (number? a2))
+         (+ a1 a2))
+        (else (list a1 '+ a2))))
+
+(define (sum? x)
+  (and (pair? x) (eq? (cadr x) '+)))
+(define (addend s) (car s))
+(define (augend s) (caddr s))
+
+;; Products
+(define (make-product m1 m2)
+  (cond ((or (=number? m1 0)
+             (=number? m2 0))
+         0)
+        ((=number? m1 1) m2)
+        ((=number? m2 1) m1)
+        ((and (number? m1) (number? m2))
+         (* m1 m2))
+        (else (list m1 '* m2))))
+
+(define (product? x)
+  (and (pair? x) (eq? (cadr x) '*)))
+(define (multiplier p) (car p))
+(define (multiplicand p) (caddr p))
+
+(test-equal 4
+  (deriv '(x + (3 * (x + (y + 2)))) 'x))
+#+end_src
+
+*** Standard Algebraic Notation
+#+begin_src scheme
+;; From the Book
+;; Differentiation
+(define (deriv exp var)
+  (cond ((number? exp) 0)
+        ((variable? exp)
+         (if (same-variable? exp var) 1 0))
+        ((sum? exp)
+         (make-sum (deriv (addend exp) var)
+                   (deriv (augend exp) var)))
+        ((product? exp)
+         (make-sum
+          (make-product
+           (multiplier exp)
+           (deriv (multiplicand exp) var))
+          (make-product
+           (deriv (multiplier exp) var)
+           (multiplicand exp))))
+        (else (error "unknown expression
+                      type: DERIV" exp))))
+
+;; Variables
+(define (variable? x) (symbol? x))
+(define (same-variable? v1 v2)
+  (and (variable? v1)
+       (variable? v2)
+       (eq? v1 v2)))
+
+(define (operator exp)
+  (cadr exp))
+
+(define (first-operand exp)
+  (car exp))
+
+(define (second-operand exp)
+  (let ((oprnd (cddr exp)))
+    (if (nil? (cdr oprnd))
+        (car oprnd)
+        (cons (operator exp) oprnd))))
+
+(define (is-operation? op exp)
+  (and (pair? exp)
+       (eq? op (operator exp))))
+
+(define (find-operation op exp)
+  (cond ((nil? (cdr exp)) nil)
+        ((is-operation? op exp) exp)
+        (else (find-operation op (cddr exp)))))
+
+;; Solution
+;; Sums
+(define (make-sum a1 a2)
+  (cond ((=number? a1 0) a2)
+        ((=number? a2 0) a1)
+        ((and (number? a1) (number? a2))
+         (+ a1 a2))
+        (else (list a1 '+ a2))))
+
+(define (sum? exp)
+  (and (is-operation? '+ exp)
+       (nil? (find-operation '+ (cddr exp)))))
+(define (addend exp) (first-operand (find-operation '+ exp)))
+(define (augend exp) (second-operand (find-operation '+ exp)))
+
+;; Products
+(define (make-product m1 m2)
+  (cond ((or (=number? m1 0)
+             (=number? m2 0))
+         0)
+        ((=number? m1 1) m2)
+        ((=number? m2 1) m1)
+        ((and (number? m1) (number? m2))
+         (* m1 m2))
+        (else (list m1 '* m2))))
+
+(define (product? exp)
+  (not (nil? (find-operation '* exp))))
+(define (multiplier exp) (first-operand (find-operation '* exp)))
+(define (multiplicand exp) (second-operand (find-operation '* exp)))
+
+(test-equal 4
+  (deriv '(x + 3 * (x + (y + 2))) 'x))
+#+end_src
