--- a/section-2-3-representing-sets.org
+++ b/section-2-3-representing-sets.org
@@ -93,7 +93,7 @@ Give an implementation of adjoin-set using the ordered representation. By analog
 #+end_src
 
 * Exercise 2.62
-Give a O(n) implementation of union-set for sets represented as ordered lists.
+Give a $\theta(n)$ implementation of union-set for sets represented as ordered lists.
 
 ** Solution
 #+begin_src scheme
@@ -122,3 +122,87 @@ Give a O(n) implementation of union-set for sets represented as ordered lists.
 (test-equal '(1 2 3 4)
   (union-set '(1 2 4) '(1 2 3)))
 #+end_src
+
+* Exercise 2.63
+Each of the following two procedures converts a binary tree to a list.
+
+#+begin_src scheme :eval never
+(define (tree->list-1 tree)
+  (if (null? tree)
+      '()
+      (append
+       (tree->list-1
+        (left-branch tree))
+       (cons (entry tree)
+             (tree->list-1
+              (right-branch tree))))))
+
+(define (tree->list-2 tree)
+  (define (copy-to-list tree result-list)
+    (if (null? tree)
+        result-list
+        (copy-to-list
+         (left-branch tree)
+         (cons (entry tree)
+               (copy-to-list
+                (right-branch tree)
+                result-list)))))
+  (copy-to-list tree '()))
+#+end_src
+
+1. Do the two procedures produce the same result for every tree?  If not, how do the results differ?  What lists do the two procedures produce for the trees in Figure 2.16?
+
+2. Do the two procedures have the same order of growth in the number of steps required to convert a balanced tree with $n$ elements to a list?  If not,which one grows more slowly?
+
+** Solution
+1-A: Yes, both procedures produce the fully sorted lists of the given tree.
+
+2-A: No. tree->list-1 has order of growth $\theta(n^2)$ since it resorts to append, at each step, while tree->list-2 is $\theta(n)$;
+
+* Exercise 2.64
+The following procedure list->tree converts an ordered list to a balanced binary tree. The helper procedure partial-tree takes as arguments an integer $n$ and list of at least $n$ elements and constructs a balanced tree containing the first $n$ elements of the list. The result returned by partial-tree is a pair (formed with cons) whose car is the constructed tree and whose cdr is the list of elements not included in the tree.
+
+#+begin_src scheme :eval never
+(define (list->tree elements)
+  (car (partial-tree
+        elements (length elements))))
+
+(define (partial-tree elts n)
+  (if (= n 0)
+      (cons '() elts)
+      (let ((left-size
+             (quotient (- n 1) 2)))
+        (let ((left-result
+               (partial-tree
+                elts left-size)))
+          (let ((left-tree
+                 (car left-result))
+                (non-left-elts
+                 (cdr left-result))
+                (right-size
+                 (- n (+ left-size 1))))
+            (let ((this-entry
+                   (car non-left-elts))
+                   (right-result
+                   (partial-tree
+                    (cdr non-left-elts)
+                    right-size)))
+              (let ((right-tree
+                     (car right-result))
+                    (remaining-elts
+                     (cdr right-result)))
+                (cons (make-tree this-entry
+                                 left-tree
+                                 right-tree)
+                      remaining-elts))))))))
+#+end_src
+
+1. Write a short paragraph explaining as clearly as you can how partial-tree works.  Draw the tree produced by list->tree for the list (1 3 5 7 9 11).
+
+2. What is the order of growth in the number of steps required by list->tree to convert a list of $n$ elements?
+
+** Solution
+partial-tree receives an ordered list of elements and the number of elements up to which it should work and returns a list whose car is the tree and cdr is the elements beyond n position. It works by splitting the first n elements of the list in three parts: the left part of the tree, the root and the right part. The left part and the right part are recursively solved. The order of growth for the number of steps is $\theta(n)$.
+
+* Exercise 2.65
+Use the results of Exercise 2.63 and Exercise 2.64 to give $\theta(n)$ implementations of union-set and intersection-set for sets implemented as (balanced) binary trees.
