--- a/section-2-3-representing-sets.org
+++ b/section-2-3-representing-sets.org
@@ -206,3 +206,127 @@ partial-tree receives an ordered list of elements and the number of elements up 
 
 * Exercise 2.65
 Use the results of Exercise 2.63 and Exercise 2.64 to give $\theta(n)$ implementations of union-set and intersection-set for sets implemented as (balanced) binary trees.
+
+** Solution
+#+begin_src scheme
+;; from the book
+(define (entry tree) (car tree))
+(define (left-branch tree) (cadr tree))
+(define (right-branch tree) (caddr tree))
+(define (make-tree entry left right)
+  (list entry left right))
+
+(define (tree->list tree)
+  (define (copy-to-list tree result-list)
+    (if (null? tree)
+        result-list
+        (copy-to-list
+         (left-branch tree)
+         (cons (entry tree)
+               (copy-to-list
+                (right-branch tree)
+                result-list)))))
+  (copy-to-list tree '()))
+
+(define (list->tree elements)
+  (car (partial-tree
+        elements (length elements))))
+
+(define (partial-tree elts n)
+  (if (= n 0)
+      (cons '() elts)
+      (let ((left-size
+             (quotient (- n 1) 2)))
+        (let ((left-result
+               (partial-tree
+                elts left-size)))
+          (let ((left-tree
+                 (car left-result))
+                (non-left-elts
+                 (cdr left-result))
+                (right-size
+                 (- n (+ left-size 1))))
+            (let ((this-entry
+                   (car non-left-elts))
+                  (right-result
+                   (partial-tree
+                    (cdr non-left-elts)
+                    right-size)))
+              (let ((right-tree
+                     (car right-result))
+                    (remaining-elts
+                     (cdr right-result)))
+                (cons (make-tree this-entry
+                                 left-tree
+                                 right-tree)
+                      remaining-elts))))))))
+
+;; actual solution
+(define (union-set tree-set-a tree-set-b)
+  (define (union-list-set list-set-a list-set-b)
+    (cond ((null? list-set-b) list-set-a)
+          ((null? list-set-a) list-set-b)
+          (else
+           (let ((x-a (car list-set-a))
+                 (x-b (car list-set-b)))
+             (cond ((= x-a x-b)
+                    (cons x-a
+                          (union-list-set (cdr list-set-a)
+                                          (cdr list-set-b))))
+                   ((< x-a x-b)
+                    (cons x-a
+                          (union-list-set (cdr list-set-a)
+                                          list-set-b)))
+                   (else
+                    (cons x-b
+                          (union-list-set list-set-a
+                                          (cdr list-set-b)))))))))
+  (let ((list-set-a (tree->list tree-set-a))
+        (list-set-b (tree->list tree-set-b)))
+    (list->tree (union-list-set list-set-a list-set-b))))
+
+(define (intersection-set tree-set-a tree-set-b)
+  (define (intersection-list-set list-set-a list-set-b)
+    (if (or (null? list-set-b)
+            (null? list-set-a))
+        '()
+        (let ((x-a (car list-set-a))
+                 (x-b (car list-set-b)))
+             (cond ((= x-a x-b)
+                    (cons x-a
+                          (intersection-list-set (cdr list-set-a)
+                                                 (cdr list-set-b))))
+                   ((< x-a x-b)
+                    (intersection-list-set (cdr list-set-a)
+                                           list-set-b))
+                   (else
+                    (intersection-list-set list-set-a
+                                           (cdr list-set-b)))))))
+  (let ((list-set-a (tree->list tree-set-a))
+        (list-set-b (tree->list tree-set-b)))
+    (list->tree (intersection-list-set list-set-a list-set-b))))
+
+;; Tests
+(define even-set (list->tree '(2 4 6 8)))
+(define uneven-set (list->tree '(1 3 5 7 9)))
+(define up-to-five (list->tree '(1 2 3 4 5)))
+(define six-to-nine (list->tree '(6 7 8 9)))
+
+(test-equal '(1 2 3 4 5 6 7 8 9)
+  (tree->list (union-set even-set uneven-set)))
+
+(test-equal '(1 2 3 4 5 6 7 8 9)
+  (tree->list (union-set up-to-five six-to-nine)))
+
+(test-equal '(1 2 3 4 5 6 8)
+  (tree->list (union-set up-to-five even-set)))
+
+(test-equal '(1 2 3 4 5)
+  (tree->list (union-set up-to-five '())))
+
+(test-equal '()
+  (tree->list (intersection-set even-set uneven-set)))
+
+(test-equal '(2 4)
+  (tree->list (intersection-set up-to-five even-set)))
+#+end_src
