--- a/section-2-3-representing-sets.org
+++ b/section-2-3-representing-sets.org
@@ -209,59 +209,6 @@ Use the results of Exercise 2.63 and Exercise 2.64 to give $\theta(n)$ implement
 
 ** Solution
 #+begin_src scheme
-;; from the book
-(define (entry tree) (car tree))
-(define (left-branch tree) (cadr tree))
-(define (right-branch tree) (caddr tree))
-(define (make-tree entry left right)
-  (list entry left right))
-
-(define (tree->list tree)
-  (define (copy-to-list tree result-list)
-    (if (null? tree)
-        result-list
-        (copy-to-list
-         (left-branch tree)
-         (cons (entry tree)
-               (copy-to-list
-                (right-branch tree)
-                result-list)))))
-  (copy-to-list tree '()))
-
-(define (list->tree elements)
-  (car (partial-tree
-        elements (length elements))))
-
-(define (partial-tree elts n)
-  (if (= n 0)
-      (cons '() elts)
-      (let ((left-size
-             (quotient (- n 1) 2)))
-        (let ((left-result
-               (partial-tree
-                elts left-size)))
-          (let ((left-tree
-                 (car left-result))
-                (non-left-elts
-                 (cdr left-result))
-                (right-size
-                 (- n (+ left-size 1))))
-            (let ((this-entry
-                   (car non-left-elts))
-                  (right-result
-                   (partial-tree
-                    (cdr non-left-elts)
-                    right-size)))
-              (let ((right-tree
-                     (car right-result))
-                    (remaining-elts
-                     (cdr right-result)))
-                (cons (make-tree this-entry
-                                 left-tree
-                                 right-tree)
-                      remaining-elts))))))))
-
-;; actual solution
 (define (union-set tree-set-a tree-set-b)
   (define (union-list-set list-set-a list-set-b)
     (cond ((null? list-set-b) list-set-a)
@@ -310,13 +257,10 @@ Use the results of Exercise 2.63 and Exercise 2.64 to give $\theta(n)$ implement
 (define even-set (list->tree '(2 4 6 8)))
 (define uneven-set (list->tree '(1 3 5 7 9)))
 (define up-to-five (list->tree '(1 2 3 4 5)))
-(define six-to-nine (list->tree '(6 7 8 9)))
 
+;; union tests
 (test-equal '(1 2 3 4 5 6 7 8 9)
   (tree->list (union-set even-set uneven-set)))
-
-(test-equal '(1 2 3 4 5 6 7 8 9)
-  (tree->list (union-set up-to-five six-to-nine)))
 
 (test-equal '(1 2 3 4 5 6 8)
   (tree->list (union-set up-to-five even-set)))
@@ -324,9 +268,42 @@ Use the results of Exercise 2.63 and Exercise 2.64 to give $\theta(n)$ implement
 (test-equal '(1 2 3 4 5)
   (tree->list (union-set up-to-five '())))
 
+;; intersection tests
 (test-equal '()
   (tree->list (intersection-set even-set uneven-set)))
 
 (test-equal '(2 4)
   (tree->list (intersection-set up-to-five even-set)))
+
+(test-equal '()
+  (tree->list (intersection-set up-to-five '())))
+#+end_src
+
+* Exercise 2.66
+Implement the lookup procedure for the case where the set of records is structured as a binary tree, ordered by the numerical values of the keys.
+
+** Solution
+#+begin_src scheme
+;; from the book
+(define (key entry) entry)
+
+(define (lookup given-key set-of-records)
+  (if (null? set-of-records)
+      false
+      (let ((current-record (car set-of-records)))
+        (cond ((= given-key (key current-record))
+               current-record)
+              ((< given-key (key current-record))
+               (lookup given-key (left-branch set-of-records)))
+              (else
+               (lookup given-key (right-branch set-of-records)))))))
+
+;; Tests
+(define primes (list->tree '(2 3 5 7)))
+
+(test-equal 2 (lookup 2 primes))
+(test-equal 3 (lookup 3 primes))
+(test-equal 7 (lookup 7 primes))
+(test-assert (not (lookup 4 primes)))
+(test-assert (not (lookup 9 primes)))
 #+end_src
