--- a/section-2-5.org
+++ b/section-2-5.org
@@ -86,8 +86,7 @@ Define a generic predicate =zero? that tests if its argument is zero, and instal
   (put '=zero?
        '(rational)
        (lambda (x)
-         (and (= 0 (numerator x))
-              (not (= 0 (denominator x))))))
+         (= 0 (numerator x))))
   (put '=zero?
        '(complex)
        (lambda (x)
