add problem statement to all exercises marked as TODO

--- a/section-1-1-newtons-method.org
+++ b/section-1-1-newtons-method.org
@@ -1,4 +1,4 @@
-#+TITLE: 1.1.7 - Example: Square Roots by Newton's Method
+#+TITLE: 1.1 Example: Square Roots by Newton's Method
 
 * Exercise 1.6
 Alyssa P. Hacker doesn't see why if needs to be provided as a special form. “Why can’t I just define it as an ordinary procedure in terms of cond?” she asks. Alyssa’s friend Eva Lu Ator claims this can indeed be done, and she defines a new version of if:
