--- a/section-2-5.org
+++ b/section-2-5.org
@@ -97,3 +97,44 @@ Define a generic predicate =zero? that tests if its argument is zero, and instal
 (define (=zero? x)
   (apply-generic '=zero? x))
 #+end_src
+
+* TODO Exercise 2.81
+Louis Reasoner has noticed that apply-generic may try to coerce the arguments to each other’s type even if they already have the same type.  Therefore, he reasons, we need to put procedures in the coercion table to coerce arguments of each type to their own type.  For example, in addition to the scheme-number->complex coercion shown above, he would do:
+
+#+begin_src scheme :eval never
+(define (scheme-number->scheme-number n) n)
+(define (complex->complex z) z)
+
+(put-coercion 'scheme-number 'scheme-number
+              scheme-number->scheme-number)
+
+(put-coercion 'complex 'complex
+              complex->complex)
+#+end_src
+
+1. With Louis’s coercion procedures installed, what happens if apply-generic is called with two arguments of type scheme-number or two arguments of type complex for an operation that is not found in the table for those types?  For example, assume that we’ve defined a generic exponentiation operation:
+
+#+begin_src scheme :eval never
+(define (exp x y)
+  (apply-generic 'exp x y))
+#+end_src
+
+and have put a procedure for exponentiation in the Scheme-number package but not in any other package:
+
+#+begin_src scheme :eval never
+;; following added to Scheme-number package
+(put 'exp
+     '(scheme-number scheme-number)
+     (lambda (x y)
+       (tag (expt x y))))
+       ; using primitive expt
+#+end_src
+
+What happens if we call exp with two complex numbers as arguments?
+
+2. Is Louis correct that something had to be done about coercion with arguments of the same type, or does apply-generic work correctly as is?
+
+3. Modify apply-generic so that it doesn’t try coercion if the two arguments have the same type.
+
+* TODO Exercise 2.82
+Show how to generalize apply-generic to handle coercion in the general case of multiple arguments.  One strategy is to attempt to coerce all the arguments to the type of the first argument, then to the type of the second argument, and so on. Give an example of a situation where this strategy (and likewise the two-argument version given above) is not sufficiently general.  (Hint: Consider the case where there are some suitable mixed-type operations present in the table that will not be tried.)
