complete README.org

--- a/README.org
+++ b/README.org
@@ -1,3 +1,17 @@
 #+title: SICP Solutions
 
 + [[file:section-1-1.org][Section 1.1]]
++ [[file:section-1-1-newtons-method.org][Example: Square Roots by Newton's Method]]
++ [[file:section-1-2.org][Section 1.2]]
++ [[file:section-1-2.org][Example: Testing for Primality]]
++ [[file:section-1-3.org][Section 1.3]]
++ [[file:section-2-1.org][Section 2.1]]
++ [[file:section-2-1-interval-arithmetic.org][Extended Exercise: Interval Arithmetic]]
++ [[file:section-2-2.org][Section 2.2]]
++ [[file:section-2-2-picture-language.org][Example: Picture Language]]
++ [[file:section-2-3.org][Section 2.3]]
++ [[file:section-2-3-symbolic-differentiation.org][Example: Symbolic Differentiation]]
++ [[file:section-2-3-representing-sets.org][Example: Representing Sets]]
++ [[file:section-2-3-huffman-encoding.org][Example: Huffman Encoding]]
++ [[file:section-2-4.org][Section 2.4]]
++ [[file:section-2-5.org][Section 2.5]]
