--- a/section-1-2-testing-primality.org
+++ b/section-1-2-testing-primality.org
@@ -42,13 +42,27 @@ Using this procedure, write a procedure search-for-primes that checks the primal
 
 ** Solution
 #+begin_src scheme
-(load-from-path "1_22-definitions.scm")
+(define (smallest-divisor n)
+  (find-divisor n 2))
+
+(define (find-divisor n test-divisor)
+  (cond ((> (square test-divisor) n)
+         n)
+        ((divides? test-divisor n)
+         test-divisor)
+        (else (find-divisor
+               n
+               (+ test-divisor 1)))))
+
+(define (prime? n)
+  (= n (smallest-divisor n)))
+
 (define (search-for-primes start)
   (define (search-for-primes-iter n count)
     (if (> count 0)
         (search-for-primes-iter
          (+ n 2)
-         (if (timed-prime-test n) (- count 1) count))))
+         (if (timed-prime-test n prime?) (- count 1) count))))
   (search-for-primes-iter
    (if (divides? 2 start) (+ start 1) start)
    3))
@@ -105,7 +119,33 @@ The smallest-divisor procedure shown at the start of this section does lots of n
 
 ** Solution
 #+begin_src scheme :eval query
-(load-from-path "1_23-definitions.scm")
+(define (smallest-divisor n)
+  (if (divides? 2 n)
+      2
+      (find-uneven-divisor n 3)))
+
+(define (find-uneven-divisor n test-divisor)
+  (cond ((> (square test-divisor) n)
+         n)
+        ((divides? test-divisor n)
+         test-divisor)
+        (else (find-uneven-divisor
+               n
+               (+ test-divisor 2)))))
+
+(define (prime? n)
+  (= n (smallest-divisor n)))
+
+(define (search-for-primes start)
+  (define (search-for-primes-iter n count)
+    (if (> count 0)
+        (search-for-primes-iter
+         (+ n 2)
+         (if (timed-prime-test n prime?) (- count 1) count))))
+  (search-for-primes-iter
+   (if (divides? 2 start) (+ start 1) start)
+   3))
+
 (search-for-primes 100000)
 (search-for-primes 1000000)
 (search-for-primes 10000000)
@@ -114,18 +154,18 @@ The smallest-divisor procedure shown at the start of this section does lots of n
 
 #+RESULTS:
 #+begin_example
-100003 | 28128
-100019 | 10090
-100043 | 10186
-1000003 | 29715
-1000033 | 29531
-1000037 | 29554
-10000019 | 91376
-10000079 | 91356
-10000103 | 91318
-100000007 | 289935
-100000037 | 289866
-100000039 | 301755
+100003 | 34409
+100019 | 10215
+100043 | 10174
+1000003 | 30108
+1000033 | 29865
+1000037 | 29859
+10000019 | 92345
+10000079 | 92246
+10000103 | 92143
+100000007 | 291604
+100000037 | 302712
+100000039 | 291874
 #+end_example
 
 
@@ -150,35 +190,59 @@ Modify the timed-prime-test procedure of Exercise 1.22 to use fast-prime? (the F
 
 ** Solution
 #+begin_src scheme :eval query
-(load-from-path "1_24-definitions.scm")
-(timed-prime-test 100003)
-(timed-prime-test 100019)
-(timed-prime-test 100043)
-(timed-prime-test 1000003)
-(timed-prime-test 1000033)
-(timed-prime-test 1000037)
-(timed-prime-test 10000019)
-(timed-prime-test 10000079)
-(timed-prime-test 10000103)
-(timed-prime-test 100000007)
-(timed-prime-test 100000037)
-(timed-prime-test 100000039)
+(define (expmod base exp m)
+  (cond ((= exp 0) 1)
+        ((even? exp)
+         (remainder
+          (square (expmod base (/ exp 2) m))
+          m))
+        (else
+         (remainder
+          (* base (expmod base (- exp 1) m))
+          m))))
+
+(define (fermat-test n)
+  (define (try-it a)
+    (= (expmod a n n) a))
+  (try-it (+ 1 (random (- n 1)))))
+
+(define (fast-prime? n times)
+  (cond ((= times 0) #t)
+        ((fermat-test n)
+         (fast-prime? n (- times 1)))
+        (else #f)))
+
+(define (fast-prime-1? n)
+  (fast-prime? n 1))
+
+(timed-prime-test 100003 fast-prime-1?)
+(timed-prime-test 100019 fast-prime-1?)
+(timed-prime-test 100043 fast-prime-1?)
+(timed-prime-test 1000003 fast-prime-1?)
+(timed-prime-test 1000033 fast-prime-1?)
+(timed-prime-test 1000037 fast-prime-1?)
+(timed-prime-test 10000019 fast-prime-1?)
+(timed-prime-test 10000079 fast-prime-1?)
+(timed-prime-test 10000103 fast-prime-1?)
+(timed-prime-test 100000007 fast-prime-1?)
+(timed-prime-test 100000037 fast-prime-1?)
+(timed-prime-test 100000039 fast-prime-1?)
 #+end_src
 
 #+RESULTS:
 #+begin_example
-100003 | 14723
-100019 | 28481
-100043 | 6019
-1000003 | 4187
-1000033 | 4104
-1000037 | 4228
-10000019 | 6296
-10000079 | 5024
-10000103 | 4929
-100000007 | 5661
-100000037 | 5435
-100000039 | 7817
+100003 | 11853
+100019 | 23803
+100043 | 5724
+1000003 | 3748
+1000033 | 3690
+1000037 | 3719
+10000019 | 4049
+10000079 | 4104
+10000103 | 4100
+100000007 | 4779
+100000037 | 4533
+100000039 | 4628
 #+end_example
 
 \[
