--- a/section-2-3-huffman-encoding.org
+++ b/section-2-3-huffman-encoding.org
@@ -1,4 +1,4 @@
-#+TITLE: 2.3 Example: Huffman Encoding
+#+title: 2.3 Example: Huffman Encoding
 
 * Exercise 2.67
 Define a encoding tree and a sample message:
@@ -22,7 +22,7 @@ Use the decode procedure to decode the message, and give the result.
 ** Solution
 Tree graph:
 
-#+INCLUDE: "2_68-tree-graph.dot" src dot :file 2_68-tree-graph.png
+#+INCLUDE: "annex/2_68-tree-graph.dot" src dot :file annex/2_68-tree-graph.png
 
 Decoding result:
 #+begin_example
